--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,4 +1,7 @@
+2006-12-14    <storm@cwi.nl>
 
+	* Fix: fixed Makefile.am to accomodate new RStore
+	syntax. Regenerated the API accordingly.
 
 Wed Feb 15 17:01:40 CET 2006 <jurgenv@cwi.nl>
  * Initial empty package. Will contain the data API of RStores,
