--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,5 +1,8 @@
 2006-12-14    <storm@cwi.nl>
 
+	* lib/Makefile.am (java-api): enabled this target and regenerated
+	API after name-clashes were fixed in the RStores grammar.
+
 	* Fix: fixed Makefile.am to accomodate new RStore
 	syntax. Regenerated the API accordingly.
 
