--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-15    <storm@cwi.nl>
+
+	* Fix: the relationstores.jar wasn't under svn. Now it is.
+
 2006-12-14    <storm@cwi.nl>
 
 	* lib/Makefile.am (java-api): enabled this target and regenerated
