--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12    <{kooiker,storm}@cwi.nl>
+
+	* Moved to new build-environment.
+
 2006-12-15    <storm@cwi.nl>
 
 	* Fix: the relationstores.jar wasn't under svn. Now it is.
