--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,13 +1,16 @@
-2007-02-12    <{kooiker,storm}@cwi.nl>
 
+
+Tue Mar 13 12:17:11 CET 2007 <jurgenv@cwi.nl>
+ * lib/lower.c: added mapping from parsed rstores to ATerm rstores.
+ * lib/**: regenerated apis with new apigen
+
+2007-02-12    <{kooiker,storm}@cwi.nl>
 	* Moved to new build-environment.
 
 2006-12-15    <storm@cwi.nl>
-
 	* Fix: the relationstores.jar wasn't under svn. Now it is.
 
 2006-12-14    <storm@cwi.nl>
-
 	* lib/Makefile.am (java-api): enabled this target and regenerated
 	API after name-clashes were fixed in the RStores grammar.
 
