--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -3,6 +3,7 @@
 Tue Mar 13 12:17:11 CET 2007 <jurgenv@cwi.nl>
  * lib/lower.c: added mapping from parsed rstores to ATerm rstores.
  * lib/**: regenerated apis with new apigen
+ * utils/lower-rstore: added commandline tool for lowering RSTores
 
 2007-02-12    <{kooiker,storm}@cwi.nl>
 	* Moved to new build-environment.
