--- a/rstore-container/ChangeLog
+++ b/rstore-container/ChangeLog
@@ -1,4 +1,7 @@
 
 
+Tue Mar 20 08:50:25 CET 2007 <jurgenv@cwi.nl>
+ * fixed distcheck
+
 Tue Mar 20 08:27:41 CET 2007 <jurgenv@cwi.nl>
  * *: initial import from Dancing Bear project
