--- a/rstore-container/ChangeLog
+++ b/rstore-container/ChangeLog
@@ -1,5 +1,8 @@
 
 
+Wed Mar 21 15:08:35 CET 2007 <jurgenv@cwi.nl>
+ * added possibility to load RStore without first writing it to disk.
+
 Tue Mar 20 08:50:25 CET 2007 <jurgenv@cwi.nl>
  * fixed distcheck
 
