--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,5 +1,9 @@
 
 
+Wed Aug 15 10:57:24 CEST 2007 <kooiker@cwi.nl>
+ * lib/lift.c: made robust lifting of RStores. The illegal parts of an RStore
+   are replaced by default values, and a message is printed on the console.
+
 Thu Apr 12 20:24:45 CEST 2007 <jurgenv@cwi.nl>
  * lib/lower.c: made lowering robust against RStores containing more 
    than just RStore syntax (i.e. unreduced functions). The illegal parts
