--- a/rstore-container/ChangeLog
+++ b/rstore-container/ChangeLog
@@ -1,3 +1,7 @@
+Wed May  7 11:49:32 2008    <bruntink@cwi.nl>
+
+	* rstore-container.pc.in: Changed dependency on relation-stores to rstore-support-java.
+
 Mon Apr 28 16:22:56 2008    <bruntink@cwi.nl>
 
 	* rstore-container.pc.in: Changed dependency on module-support to module-support-java.
