--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -1,3 +1,8 @@
+
+
+Mon Jun  9 13:25:48 CEST 2008 <jurgenv@cwi.nl>
+ * rstore-support.pc.in: Bumped version to 0.2
+
 Wed May  7 13:12:43 2008    <bruntink@cwi.nl>
 
 	* relation-stores.pc.in: Renamed to rstore-support.pc.in and changed names.
