--- a/rstore-support/ChangeLog
+++ b/rstore-support/ChangeLog
@@ -3,6 +3,8 @@
 Fri Aug 29 14:33:23 CEST 2008 <jurgenv@cwi.nl>
  * utils/{lift,lower}-rstore/main.c: adapted output format to output
    ATerm SAF format for compatibility with Java ATerm tools.
+ * lib/lower.c: improved error handling of lowering by printing erroneous
+   terms to a debug file and printing a readable message.
 
 Mon Jun  9 13:25:48 CEST 2008 <jurgenv@cwi.nl>
  * rstore-support.pc.in: Bumped version to 0.2
